GitOpsEnd2End/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-java-app
spec:
  replicas: 2
  selector:
    matchLabels:
      run: my-java-app
  template:
    metadata:
      labels:
        run: my-java-app
    spec:
      containers:
      - name: my-java-app
        image: marviflame89/my-java-app-project:3.0.0-25
        ports:
          - containerPort: 8080
        imagePullPolicy: IfNotPresent
