GitOpsEnd2End/demo-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-svc
  labels:
    run: demo-app
spec:
  type: ClusterIP
  ports:
  - port: 80 # Service Port
    targetPort: 8080 # Node Port
    protocol: TCP
    name: http
  selector:
    run: demo-app
