GitOpsEnd2End/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-java-app
  labels:
    run: my-java-app
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    run: my-java-app
