GitOpsEnd2End/netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: net-pol
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: demo-app
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            run: client

    - from:
      - podSelector:
          matchLabels:
            app: utilities  

    - from:
      - podSelector:
          matchLabels:
            app: utilities

    - from:
      - namespaceSelector:
         matchLabels:
           kubernetes.io/metadata.name: ingress-nginx               
      # ports:
      # - protocol: TCP       
      #   port: 8080
